using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorID
{
    
    public static readonly int MovementID = Animator.StringToHash("Movement");
    public static readonly int HasInputID = Animator.StringToHash("HasInput");
    public static readonly int Attack = Animator.StringToHash("Attack");
    public static readonly int Spring = Animator.StringToHash("Spring");
    public static readonly int MoveSpeed = Animator.StringToHash("MoveSpeed");
    public static readonly int LookOn = Animator.StringToHash("LookOn");    
    public static readonly int MoveX = Animator.StringToHash("MoveX");
    public static readonly int MoveY = Animator.StringToHash("MoveY");
    public static readonly int Run = Animator.StringToHash("Run");
    public static readonly int Parry = Animator.StringToHash("Parry");

}
